# JersonCortes.github.io

./: Cargo.toml  README.md  go.mod  hugo.toml  index.html  style.css
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: gh-pages-deploy.yml
content/en/: _index.md
content/en/pages/: about.md
content/en/posts/: _index.md
content/es/: _index.md
content/es/pages/: about.md
content/es/posts/: _index.md
i18n/: es-mx.yaml
public/: style.css
src/: app.rs  lib.rs  main.rs
src/components/: blog.rs  home_page.rs  side_bar.rs  sidebar.rs
src/routes/: home_page.rs
style/: main.scss
