[package]
name = "github-pages"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.7.0", features = ["csr", "nightly"] }
leptos_meta = { version = "0.7.0"}
leptos_router = { version = "0.7.0", features = ["nightly"] }
console_log = "1"
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen = "0.2.96"

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
